AboutTab Page, Beta Page, AboutView Page design fixes.

--- a/Localizable.strings
+++ b/Localizable.strings
@@ -31,7 +31,7 @@
 
 //BETA PAGE Contents
 
-"CONTENT_BETAPAGE"        =   "    Welcome to our Beta Page, come back here to look for the latest features getting ready to be implemented into our App!";
+"CONTENT_BETAPAGE"        =   "    Want to begin creating your own events? Or maybe you want to browse our database a little more. Create your own personal account, create your custom event, for free, and manage everything through our site. Curious about what else might be going on around the area; dive into our 'Discover by Category' section on our website and see what's already happening around you.";
 
 // Help Center Contents
 
