Finally got segue on More controller working and going to their correct view controllers

--- a/Localizable.strings
+++ b/Localizable.strings
@@ -6,7 +6,7 @@
   Copyright (c) 2017 Adrenaline Life. All rights reserved.
 */
 
-"APP_NAME" = "EventApp";
+"APP_NAME" = "Adrenaline Life";
 
 /**
  *  application service url
