--- a/Localizable.strings
+++ b/Localizable.strings
@@ -35,8 +35,8 @@
 
 // Help Center Contents
 
-"CONTENT_HELPCENTER"      =     "Put Help center information here";
+"CONTENT_POLICYAGREEMENT"      =     "Put Policy agreement information here";
 
 // Terms and Conditions Contents
 
-"CONTENT_TERMS"           =     "Put Terms and Conditions information here";
+"CONTENT_TERMSCONDITIONS"           =     "Put Terms and Conditions information here";
