final push to GitHub before connect to bit bucket

--- a/Localizable.strings
+++ b/Localizable.strings
@@ -23,6 +23,7 @@
 "GETFEEDS_METHOD"           =   "/webservices/tweet-fb.php";
 "LOGIN_METHOD"              =   "/api/Login";
 "REGISTER_METHOD"           =   "/api/Register";
+"CREATE_EVENT_METHOD"       =   "/api/CreateEvent";
 
 
 //About View Contents
