--- a/Localizable.strings
+++ b/Localizable.strings
@@ -24,7 +24,9 @@
 "LOGIN_METHOD"              =   "/api/Login";
 "REGISTER_METHOD"           =   "/Adrenaline_Custom/api/Register";
 "CREATE_EVENT_METHOD"       =   "/Adrenaline_Custom/api/postEvent";
-"REMOVE_FAV_EVENT"          =   "/Adrenaline_Custom/api/addRemoveFav";
+"ADD_REMOVE_FAV_EVENT"      =   "/Adrenaline_Custom/api/addRemoveFav";
+"GET_FAV_EVENT"             =   "/Adrenaline_Custom/api/getFavEvents";
+"GET_FAV_EVENT_TEST"        =   "/Adrenaline_Custom/api/isFavourite";
 
 
 //About View Contents
