--- a/Localizable.strings
+++ b/Localizable.strings
@@ -23,7 +23,7 @@
 "GETFEEDS_METHOD"           =   "/webservices/tweet-fb.php";
 "LOGIN_METHOD"              =   "/api/Login";
 "REGISTER_METHOD"           =   "/Adrenaline_Custom/api/Register";
-"CREATE_EVENT_METHOD"       =   "/Adrenaline_Custom/api/postEvent";
+"CREATE_EVENT_METHOD"       =   "/Adrenaline_Custom/add_event.php";
 "ADD_REMOVE_FAV_EVENT"      =   "/Adrenaline_Custom/api/addRemoveFav";
 "GET_FAV_EVENT"             =   "/Adrenaline_Custom/api/getFavEvents";
 "GET_FAV_EVENT_TEST"        =   "/Adrenaline_Custom/api/isFavourite";
