--- a/Localizable.strings
+++ b/Localizable.strings
@@ -26,7 +26,7 @@
 "CREATE_EVENT_METHOD"       =   "/Adrenaline_Custom/add_event.php";
 "ADD_REMOVE_FAV_EVENT"      =   "/Adrenaline_Custom/api/addRemoveFav";
 "GET_FAV_EVENT"             =   "/Adrenaline_Custom/api/getFavEvents";
-"FAV_EVENT"                 =   "/Adrenaline_Custom/api/isFavourite";
+"USER_HAS_FAV_EVENT"        =   "/Adrenaline_Custom/api/isFavourite";
 
 
 //About View Contents
