--- a/Localizable.strings
+++ b/Localizable.strings
@@ -27,7 +27,12 @@
 "CREATE_EVENT_METHOD"       =   "/Adrenaline_Custom/add_new.php";
 "ADD_REMOVE_FAV_EVENT"      =   "/Adrenaline_Custom/api/addRemoveFav";
 "GET_FAV_EVENT"             =   "/Adrenaline_Custom/api/getFavEvents";
-"USER_HAS_FAV_EVENT"        =   "/Adrenaline_Custom/api/isFavourite";
+//"USER_HAS_FAV_EVENT"        =   "/Adrenaline_Custom/api/getFavEvents/isFavourite";
+
+// Testing PHP hit method.
+
+"USER_HAS_FAV_EVENT"        =   "/Adrenaline_Custom/api/getFavEvents";
+
 
 
 //About View Contents
