--- a/Localizable.strings
+++ b/Localizable.strings
@@ -15,6 +15,8 @@
 "APPLICATION_URL"           =   "http://173.254.64.67";   // testing from Blue Host
 //   "http://adrenalinelife.org/"
 
+// Color Code: #ed1c24
+
 //web service methods
 "GETEVENTS_METHOD"          =   "/Adrenaline_App/api/getEvents";
 "GETUSERTICKETS_METHOD"     =   "/api/getUserTickets";
@@ -37,7 +39,7 @@
 
 //About View Contents
 
-"CONTENT_ABOUTVIEW"       =   "    Today, people expect things to find them, not the other way around. This applies to sports and recreation, active people want to be active but they usually struggle on finding a place to go do what they love. Adrenaline will solve this struggle, allowing people to find what they love to do.\n\nWe are a private organization who founded Adrenaline Life in 2016. We are located in Birmingham, AL.\n\nContact us anytime:\nSupport@adrenalinelife.org\n\nRequest a Category:\nwww.AdrenalineLife.org/request\n";
+"CONTENT_ABOUTVIEW"       =   "    Today, people expect things to find them, not the other way around. This applies to sports and recreation, active people want to be active but they usually struggle on finding a place to go do what they love. Adrenaline will solve this struggle, allowing people to find what they love to do.\n\nWe are a private organization who founded Adrenaline Life in 2016. We are located in Birmingham, AL.\n\nContact us anytime:\nAdrenalineLife16@gmail.com\n\nWebsite:\nwww.AdrenalineLife.org\n\nRequest a Category:\nwww.AdrenalineLife.org/request\n";
 
 //BETA PAGE Contents
 
